# advent-of-code

./: .gitignore  CMakeLists.txt
2023/common/aoc23/: map.h
2023/day_01/: main.cpp
2023/day_02/: main.cpp
2023/day_03/: main.cpp
2023/day_04/: main.cpp
2023/day_05/: main.cpp
2023/day_06/: main.cpp
2023/day_07/: main.cpp
2023/day_08/: main.cpp
2023/day_09/: main.cpp
2023/day_10/: main.cpp
2023/day_11/: main.cpp
2024/day_01/: main.cpp
2024/day_02/: main.cpp
2024/day_03/: main.cpp
2024/day_04/: main.cpp
2025/day_01/: main.cpp
2025/day_02/: main.cpp
2025/day_03/: main.cpp
2025/day_04/: main.cpp
2025/day_05/: main.cpp
2025/day_06/: main.cpp
2025/day_07/: main.cpp
2025/day_08/: main.cpp
common/: util.hpp
